# 3D-Multi-Object-Detection-and-Tracking

./: CMakeLists.txt  Dockerfile  README.md  package.xml
.github/workflows/: main.yml
scripts/: base_filter.h  filters.h  main.cpp
scripts/camera_detection/: camera_detector.cpp  camera_detector.h
scripts/image_detection/: detector.cpp  detector.h
scripts/lidar_detection/: lidar_detector.cpp  lidar_detector.h
scripts/lidar_filter/: base_filter.h  filters.h
scripts/tracking/: association.h  kalman_filter.h  track.h  tracker.h
tests/: test_main.cpp
